[project]
name = "fastapi-sandbox"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kei Takahashi", email = "takahashi.kgs@om.asahi-kasei.co.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "flake8>=5.0.4",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "pyproject-flake8>=5.0.4.post1",
]

[tool.hatch.metadata]
allow-direct-references = true
